# puffin-lang

./: .gitignore  AGENTS.md  LICENSE  README.md
a5/: interp-cek.rkt
ascii-art/: ascii.rkt
assembly/: ex0.s  prog
bench/: build-report.py  report.html  results.json  run-benchmarks.py
boot/: puffincc.pbc
cis531-p1/: .#test.rkt  stack-machine.rkt
compilers/: a.out  compile-r0.rkt  example.c  example.s  out  out.c  xyz  xyz.s
docs/: BOOTSTRAP.md  BYTECODE.md  DELTA.md  FFI.md  LANGUAGE.md  MODULES.md  OPTIMIZER.md  STDLIB.md  TYPES.md  WASM-VM.md  stdlib.html  tutorial.html
examples/: README.md
interpreters/: interp-r0.rkt
notes/: algebra.rkt  evaluation.rkt  patterns.rkt
p0/: README.md  all-tests.sh  solution.rkt  test.rkt
p1/: README.md  compile-starter.rkt  compile.rkt  debug-server.rkt  index.html  interpreters.rkt  irs.rkt  main.rkt  output  output.s  repro.sh  system.rkt  test.rkt
p2/: README.md  compile.rkt  index.html  interpreters.rkt  irs.rkt  main.rkt  make-starter.sh  output  output.s  runtime.c  system.rkt  test.rkt
p3/: Dockerfile  README.md  compile-starter.rkt  compile.rkt  debug-server.rkt  driver.py  ex0  interpreters.rkt  irs.rkt  main.rkt  make-starter.sh  repro.sh  system.rkt  test.rkt  tester.py  testout
p4/: README.md  compile.rkt  debug-server.rkt  ex.s  interpreters.rkt  irs.rkt  main.rkt  make-starter.sh  out  system.rkt  test.rkt
tests/ffi-demo/pfregex/: Cargo.toml
tests/ffi-demo/pfregex/puf/: badsig-main.puf  badsig.pufs  main.puf  regex.puf  regex.pufs  sig-main.puf
tests/ffi-demo/pfregex/src/: lib.rs
(+4408 files in other folders)
